keyfeature3: fix the mask demo alignment problem

--- a/src/main/webapp/keyfeature3/scripts/auty/custom-style.css
+++ b/src/main/webapp/keyfeature3/scripts/auty/custom-style.css
@@ -10,6 +10,14 @@ input.labelauty.disable-icon+label>span.labelauty-unchecked-image {
 	background-image: url(images/input-disabled.png);
 }
 
+input.labelauty.terms-icon+label>span.labelauty-checked-image {
+	background-image: url(images/terms-checked.png);
+}
+
+input.labelauty.terms-icon+label>span.labelauty-unchecked-image {
+	background-image: url(images/terms-unchecked.png);
+}
+
 .statement {
 	font-size: 14px;
 }
